--- a/estilos.css
+++ b/estilos.css
@@ -21,6 +21,12 @@ p {
   text-align: center;
 }
 
+h3 {
+  font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+  font-size: 1.25rem;
+  color: #ffffff;
+}
 .analisis {
   background: #ffffff;
   border-radius: 12px;
@@ -67,7 +73,28 @@ p {
 }
 
 .analisis a:hover {
-  background: #0c52c2;
+  background: #dfdfdf;
+  color: #000000;
+}
+
+footer {
+  margin-top: 3rem;
+  padding: 1rem;
+  text-align: center;
+  background-color: #f0f0f0;
+  font-size: 0.9rem;
+  color: #555;
+}
+
+footer a {
+  color: #000;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+footer a:hover {
+  color: #555;
+  text-decoration: underline;
 }
 
 /* Carrusel */
